# secure_os_layer

./: .gitignore  Cargo.toml  README.md  init.sql  package.json  secure_os_layer.db
sdk/: example.js  index.js  package.json
secure-os-layer-docs/: docusaurus.config.js  package-lock.json  package.json
secure-os-layer-docs/docs/: api.md  getting-started.md
src/: main.rs  permission_middleware.rs
ui-electron/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
