[package]
name = "secure_os_layer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
futures-util = "0.3"
